force-app/main/default/objects/Forrester_SHIR_CASE_FH_PATENT_COSTS_D__x/Forrester_SHIR_CASE_FH_PATENT_COSTS_D__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_FH_PATENT_COSTS_DUE</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_FH_PATENT_COSTS_DUE</externalName>
    <label>Forrester_SHIR_CASE_FH_PATENT_COSTS_DUE</label>
    <pluralLabel>Forrester_SHIR_CASE_FH_PATENT_COSTS_DUE</pluralLabel>
</CustomObject>