force-app/main/default/objects/Forrester_SHIR_CASE_FH_PATENT_COSTS_D__x/fields/AGREEMENT_NUM__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_NUM__c</fullName>
    <description>AGREEMENT_NUM</description>
    <externalDeveloperName>AGREEMENT_NUM</externalDeveloperName>
    <label>Agreement Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>