force-app/main/default/objects/Forrester_SHIR_CASE_FH_PATENT_COSTS_D__x/fields/AGREEMENT_STATUS_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_STATUS_DESCRIPTION__c</fullName>
    <description>AGREEMENT_STATUS_DESCRIPTION</description>
    <externalDeveloperName>AGREEMENT_STATUS_DESCRIPTION</externalDeveloperName>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>