force-app/main/default/objects/Forrester_SHIR_CASE_FH_PATENT_COSTS_D__x/fields/DOMESTIC__c.field-meta.xml
<CustomField>
    <fullName>DOMESTIC__c</fullName>
    <description>DOMESTIC</description>
    <externalDeveloperName>DOMESTIC</externalDeveloperName>
    <label>Domestic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>