force-app/main/default/objects/Forrester_SHIR_CASE_FH_PATENT_COSTS_D__x/fields/FOREIGN__c.field-meta.xml
<CustomField>
    <fullName>FOREIGN__c</fullName>
    <description>FOREIGN</description>
    <externalDeveloperName>FOREIGN</externalDeveloperName>
    <label>Foreign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>