force-app/main/default/objects/Forrester_SHIR_CASE_FH_PATENT_COSTS_D__x/fields/LINE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>LINE_TYPE__c</fullName>
    <description>LINE_TYPE</description>
    <externalDeveloperName>LINE_TYPE</externalDeveloperName>
    <label>Line Type</label>
    <length>11</length>
    <type>Text</type>
</CustomField>