force-app/main/default/objects/Forrester_SHIR_CASE_FH_PATENT_COSTS_D__x/fields/TOTAL__c.field-meta.xml
<CustomField>
    <fullName>TOTAL__c</fullName>
    <description>TOTAL</description>
    <externalDeveloperName>TOTAL</externalDeveloperName>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>